--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.22.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-easy-toast": "^1.1.0",
     "react-native-ui-kitten": "^3.1.2",
     "react-navigation": "^2.16.0",
     "react-redux": "^5.0.7",
